--- a/css/default.css
+++ b/css/default.css
@@ -28,6 +28,7 @@ footer {
 .group-button {
     margin-right: 10px;
     margin-top: 5px;
+    width: 55px;
 }
 .group-container {
     margin: 20px;
