--- a/css/default.css
+++ b/css/default.css
@@ -8,8 +8,13 @@ a {
 a:hover {
     color: #ffff00;
 }
+#main-container {
+    margin-top: 5px;
+    min-width: 1100px;
+    border: solid 1px #000000;
+}
 footer {
-    margin-left: 20px;
+    text-align: center;
 }
 #main-title {
     margin-left: 20px;
